--- a/css/resume.css
+++ b/css/resume.css
@@ -123,7 +123,8 @@ a:hover, a:focus, a:active {
 }
 
 .icon {
-  width: 2.5rem;
-  height: 3rem;
+  width: 40px;
+  height: auto;
   fill: currentColor;
+  vertical-align:-13px;
 }
